Style section 2 and section 3
So Im mostly done with section 2 and
section 3. The wii probably need some
more work down the line but its good for now

--- a/index.html
+++ b/index.html
@@ -9,36 +9,40 @@
 </head>
 <body>
     <div class="header">
-        <img src="./images/tiger-7029549_960_720.png" width="100" height="100" alt="Tiger Logo">
+        <img src="./images/tiger-7029549_960_720.png" width="70" height="70" alt="Tiger Logo">
         <ul>
             <li><a href="#">link one</a></li>
             <li><a href="#">link two</a></li>
             <li><a href="#">link three</a></li>
         </ul>
     </div>
-    <div class="cont1" >
-        <div class="Title">This Website is awesome</div>
-        <div class="sub">This is my first project of landing site. It may not be perfect if u know what i mean</div>
-        <button class="sign">Sign up</button>
-        <img src="./images/pexels-photo-735911.jpeg" width="200" height="100" alt="tesing img">
+    <div class="cont1">
+        <div class="txt_btn">
+            <div class="Title">This Website is awesome</div>
+            <div class="sub">This is my first project of landing site. It may not be perfect if u know what i mean</div>
+            <button class="sign">Sign up</button>
+        </div>
+        <img src="./images/pexels-photo-735911.jpeg" width="400" height="200" alt="tesing img">
     </div>
     <div class="cont2">
         <p class="info">Some random info</p>
-        <div class="infoimg">
-            <img src="./images/study.jpeg" alt="study img">
-            <div class="text">Hi my name is Grzegorz and I'm studying computer-science</div>
-        </div>
-        <div class="infoimg">
-            <img src="./images/pexels-photo.jpg" alt="study img">
-            <div class="text">I love video-games</div>
-        </div>
-        <div class="infoimg">
-            <img src="./images/football.jpeg" alt="study img">
-            <div class="text">In my free time I enjoy playing football</div>
-        </div>
-        <div class="infoimg">
-            <img src="./images/web-dev.jpeg" alt="study img">
-            <div class="text">I'm also trying to become web-dev in the future!</div>
+        <div class="cont2_1">
+            <div class="infoimg">
+                <img class="img3" src="./images/study.jpeg" alt="study img">
+                <div class="text">Hi my name is Grzegorz and I'm studying computer-science</div>
+            </div>
+            <div class="infoimg">
+                <img class="img3" src="./images/pexels-photo.jpg" alt="study img">
+                <div class="text">I love video-games</div>
+            </div>
+            <div class="infoimg">
+                <img class="img3" src="./images/football.jpeg" alt="study img">
+                <div class="text">In my free time I enjoy playing football</div>
+            </div>
+            <div class="infoimg">
+                <img class="img3" src="./images/web-dev.jpeg" alt="study img">
+                <div class="text">I'm also trying to become web-dev in the future!</div>
+            </div>
         </div>
         </div>
     </div>
