Finish styling sections, still need work
So I've done styling for my first project
what i've notice it's that im super bad
at optimizing css, and need to work on it
page still need some tunning but its serviceable?

--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 </head>
 <body>
     <div class="header">
-        <img src="./images/tiger-7029549_960_720.png" width="70" height="70" alt="Tiger Logo">
-        <ul>
-            <li><a href="#">link one</a></li>
-            <li><a href="#">link two</a></li>
-            <li><a href="#">link three</a></li>
-        </ul>
+        <div class="header_1 container">
+            <img src="./images/tiger-7029549_960_720.png" width="70" height="70" alt="Tiger Logo">
+            <ul>
+                <li><a href="#">link one</a></li>
+                <li><a href="#">link two</a></li>
+                <li><a href="#">link three</a></li>
+            </ul>
+        </div>
     </div>
     <div class="cont1">
-        <div class="txt_btn">
-            <div class="Title">This Website is awesome</div>
-            <div class="sub">This is my first project of landing site. It may not be perfect if u know what i mean</div>
-            <button class="sign">Sign up</button>
-        </div>
-        <img src="./images/pexels-photo-735911.jpeg" width="400" height="200" alt="tesing img">
+            <div class="txt_btn">
+                <div class="Title">This Website is awesome</div>
+                <div class="sub">This is my first project of landing site. It may not be perfect if u know what i mean</div>
+                <button class="sign">Sign up</button>
+            </div>
+            <img src="./images/pexels-photo-735911.jpeg" width="500" height="220" alt="tesing img">
     </div>
     <div class="cont2">
-        <p class="info">Some random info</p>
+        <p class="info_title">Some random info</p>
         <div class="cont2_1">
             <div class="infoimg">
                 <img class="img3" src="./images/study.jpeg" alt="study img">
@@ -47,13 +49,19 @@
         </div>
     </div>
     <div class="cont3">
-        <div class="quote">I'm not sure what should i write here. I will just use this text as a filling and maybe in the future i will actually edit this section</div>
+        <div class="cont3_1">
+            <div class="quote">I'm not sure what should i write here. I will just use this text as a filling and maybe in the future i will actually edit this section</div>
+            <div class="author"> - Grzegorz Bandyra, nobody</div>
+        </div>
     </div>
     <div class="cont4">
-        <div class="box1"></div>
-        <div class="bxtxt">Call to action! It's time!</div>
-        <div class="bxtxt2">Sign up to my newsletter by clicking that button right over there!</div>
-        <button class="sing2">Sign up</button>
+        <div class="cont4_1">
+            <div class="box1">
+                <div class="bxtxt">Call to action! It's time!</div>
+                <div class="bxtxt2">Sign up to my newsletter by clicking that button right over there!</div>
+            </div>
+            <button class="sing2">Sign up</button>
+        </div>
     </div>
     <div class="footer">Copyright @ Grzegorz Bandyra 2022</div>
 
