Add parallax background
I just added this background to play around
with it a little bit. I like the parallax effect
on sites so decided to test it

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>GB Landing Page</title>
 </head>
 <body>
+    <div class="background_parallax">
+        <img id="background" src="./images/4k-Gaming-Wallpaper-Computer-scaled.jpg" alt="background img"> 
+    </div>
     <div class="header">
         <div class="header_1 container">
             <img src="./images/tiger-7029549_960_720.png" width="70" height="70" alt="Tiger Logo">
@@ -24,7 +27,7 @@
                 <div class="sub">This is my first project of landing site. It may not be perfect if u know what i mean</div>
                 <button class="sign">Sign up</button>
             </div>
-            <img src="./images/pexels-photo-735911.jpeg" width="500" height="220" alt="tesing img">
+            <img id="keyboard" src="./images/pexels-photo-735911.jpeg" width="500" height="220" alt="tesing img">
     </div>
     <div class="cont2">
         <p class="info_title">Some random info</p>
