--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>GB Landing Page</title>
 </head>
 <body>
-    <div class="background_parallax">
+    <!-- <div class="background_parallax">
         <img id="background" src="./images/4k-Gaming-Wallpaper-Computer-scaled.jpg" alt="background img"> 
-    </div>
+    </div> -->
     <div class="header">
         <div class="header_1 container">
-            <img src="./images/tiger-7029549_960_720.png" width="70" height="70" alt="Tiger Logo">
+            <!-- <img src="./images/tiger-7029549_960_720.png" width="70" height="70" alt="Tiger Logo"> -->
             <ul>
                 <li><a href="#">link one</a></li>
                 <li><a href="#">link two</a></li>
@@ -54,7 +54,7 @@
     <div class="cont3">
         <div class="cont3_1">
             <div class="quote">I'm not sure what should i write here. I will just use this text as a filling and maybe in the future i will actually edit this section</div>
-            <div class="author"> - Grzegorz Bandyra, nobody</div>
+            <div class="author"> - Grzegorz Bandyra</div>
         </div>
     </div>
     <div class="cont4">
