--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="cont1">
             <div class="txt_btn">
                 <div class="Title">This Website is awesome</div>
-                <div class="sub">This is my first project of landing site. It may not be perfect if u know what i mean</div>
+                <div class="sub">This is my first project of monochromatic website. It may not be perfect if u know what i mean</div>
                 <button class="sign">Sign up</button>
             </div>
             <img id="keyboard" src="./images/pexels-photo-735911.jpeg" width="500" height="220" alt="tesing img">
