--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="cont2_1">
             <div class="infoimg">
                 <img class="img3" src="./images/study.jpeg" alt="study img">
-                <div class="text">Hi my name is Grzegorz and I'm studying computer-science</div>
+                <div class="text">I'm studying computer-science</div>
             </div>
             <div class="infoimg">
                 <img class="img3" src="./images/pexels-photo.jpg" alt="study img">
@@ -54,7 +54,7 @@
     <div class="cont3">
         <div class="cont3_1">
             <div class="quote">I'm not sure what should i write here. I will just use this text as a filling and maybe in the future i will actually edit this section</div>
-            <div class="author"> - Grzegorz Bandyra</div>
+            <div class="author"> ~Somebody</div>
         </div>
     </div>
     <div class="cont4">
